src/tui/snapshots/copt__tui__snapshot_tests__diff_view.snap
---
source: src/tui/snapshot_tests.rs
expression: output
---
⚡  CLAUDE PROMPT OPTIMIZER v0.3.0                                               
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌ ✨  Changes ──────────────────────────────────────────────────────────────────┐
│┌• Original───────────────────────────┐┌✨  Optimized─────────────────────────┐│
││- You should try to think carefully  ││+ Please analyze this problem        ││
││about this problem.                  ││systematically and provide a detailed││
││                                     ││solution.                            ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
Esc:return  ↑↓:scroll  c:copy  s:save  e:edit  q:quit