src/tui/snapshots/copt__tui__snapshot_tests__help_view.snap
---
source: src/tui/snapshot_tests.rs
expression: output
---
⚡  CLAUDE PROMPT OPTIMIZER v0.3.2                                               
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌ Keyboard Shortcuts ──────────────────────────────────────────────────────────┐
│NAVIGATION                                                                    │
│                                                                              │
│  ↑/↓        Move selection up/down                                           │
│  Enter      Expand/collapse category                                         │
│  PgUp/PgDn  Scroll content                                                   │
│  Home       Go to top                                                        │
│                                                                              │
│VIEWS                                                                         │
│                                                                              │
│  d          Toggle diff view                                                 │
│  ?          Toggle help (this screen)                                        │
│  Esc        Return to main view                                              │
│                                                                              │
│ACTIONS                                                                       │
│                                                                              │
│  c          Copy optimized prompt to clipboard                               │
│  s          Save optimized prompt to file                                    │
│  e          Open optimized prompt in editor                                  │
└──────────────────────────────────────────────────────────────────────────────┘
Esc:return  q:quit
