src/tui/snapshots/copt__tui__snapshot_tests__main_view_analysis_done.snap
---
source: src/tui/snapshot_tests.rs
expression: output
---
⚡  CLAUDE PROMPT OPTIMIZER v0.3.2                                               
Optimize prompts for Claude 4.5                                                 
📥  Input: test_prompt.txt (53 chars, 12 tokens)                                 
────────────────────────────────────────────────────────────────────────────────
┌ 📊  Analysis Results ─────────────────────────────────────────────────────────┐
│▼ Explicitness (1 issues)                                                     │
│   ℹ EXP001 Vague instruction detected (L1)                                   │
│▼ Style (1 issues)                                                            │
│   ⚠ STY003 Word 'think' detected - sensitive in Claude Opus (L1)             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ ⚙ Status ────────────────────────────────────────────────────────────────────┐
│✓ Analysis complete - ready to optimize                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓:nav  Enter:collapse  ?:help  q:quit
