src/tui/snapshots/copt__tui__snapshot_tests__main_view_done.snap
---
source: src/tui/snapshot_tests.rs
expression: output
---
⚡  CLAUDE PROMPT OPTIMIZER v0.3.2                                               
Optimize prompts for Claude 4.x                                                 
📥  Input: test_prompt.txt (53 chars, 12 tokens)                                 
────────────────────────────────────────────────────────────────────────────────
┌ 📊  Analysis Results ─────────────────────────────────────────────────────────┐
│▼ Explicitness (1 issues)                                                     │
│   ℹ EXP001 Vague instruction detected (L1)                                   │
│▼ Style (1 issues)                                                            │
│   ⚠ STY003 Word 'think' detected - sensitive in Claude Opus (L1)             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ 📊  Optimization Results ─────────────────────────────────────────────────────┐
│TOKEN ANALYSIS                                                                │
│                                                                              │
│PERFORMANCE                                                                   │
│Processing time:  1.23s                                                       │
│PROVIDER                                                                      │
│Service:          Bedrock                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓:nav  Enter:collapse  d:diff  c:copy  s:save  e:edit  ?:help  q:quit
