src/tui/snapshots/copt__tui__snapshot_tests__no_issues.snap
---
source: src/tui/snapshot_tests.rs
expression: output
---
⚡  CLAUDE PROMPT OPTIMIZER v0.4.0                                               
Optimize prompts for Claude 4.x                                                 
📥  Input: stdin (30 chars, 5 tokens)                                            
────────────────────────────────────────────────────────────────────────────────
┌ 📊  Analysis Results ─────────────────────────────────────────────────────────┐
│✓ No issues detected - your prompt looks good!                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ ⚙ Status ────────────────────────────────────────────────────────────────────┐
│✓ Analysis complete - ready to optimize                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓:nav  Enter:toggle  ?:help  q:quit
