src/tui/snapshots/copt__tui__snapshot_tests__offline_mode.snap
---
source: src/tui/snapshot_tests.rs
expression: output
---
⚡  CLAUDE PROMPT OPTIMIZER v0.4.0 [OFFLINE MODE]                                
Static analysis only (no LLM calls)                                             
📥  Input: test_prompt.txt (53 chars, 12 tokens)                                 
────────────────────────────────────────────────────────────────────────────────
┌ 📊  Analysis Results ─────────────────────────────────────────────────────────┐
│▼ Explicitness (1 issues)                                                     │
│   ℹ EXP001 Vague instruction detected (L1)                                   │
│▼ Style (1 issues)                                                            │
│   ⚠ STY003 Word 'think' detected - sensitive in Claude Opus (L1)             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ ⚙ Status ────────────────────────────────────────────────────────────────────┐
│✓ Analysis complete                                                           │
│                                                                              │
│Run without --offline to optimize with LLM                                    │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓:nav  Enter:collapse  ?:help  q:quit
