src/tui/snapshots/copt__tui__snapshot_tests__small_terminal.snap
---
source: src/tui/snapshot_tests.rs
assertion_line: 130
expression: output
---
✓ 2 issues found                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
↑↓:nav  Enter:expand  ?:help  q:quit
